See if 3rd fix stop keyboard overflow on mobile.

--- a/frontend/my-wordle/styles.css
+++ b/frontend/my-wordle/styles.css
@@ -142,5 +142,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 15px;
 }
